--- a/scss/_04-layout.scss
+++ b/scss/_04-layout.scss
@@ -2,68 +2,74 @@
 .header {
     background-color: $light;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.04);
+    position: relative;
     &__wrapper {
         display: flex;
-        justify-content: space-between;
         align-items: center;
         min-height: 7rem;
-        @include media-query(770px){
-            flex-direction: column;    
+        @include media-query(860px){
+            flex-direction: column;  
+            padding: 2rem 0;  
         }
+
+        @include media-query(420px){
+            align-items: flex-start;
+            padding: 1rem 0; 
+        }
+
         .logo__img {
             display: flex;
             @include media-query(770px){
-             padding: 2rem 0;
+             padding: 1rem 0;
             }
+            @include media-query(420px){
+                img {
+                    width: 4rem;
+                }
+            }
+           
+
             .logo__text {
                 padding-left: 1.5rem;
                 align-self: center;
-                h2 {
-                    font-size: 2rem;
-                    font-family: $font-black;
-                    line-height: 1;
-                }
-                span {
-                    font-size: 1.4rem;
-                }
+                height: 100%;
+                font-size: clamp(1.6rem, 5vw, 2.2rem);
+                line-height: 1.2;
             }
         }
 
-        form {
-            @include media-query(770px){
-                margin-bottom: 2rem;
-               }
-            select {
-                border: none;
-                text-transform: uppercase;
-                cursor: pointer;
-                font-weight: bold;
-                option {
-                    padding: 1rem;
-                }
-            }
-        }
-
-        .cto {
+        .main__header {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            font-size: clamp(2.8rem, 5vw, 3.3rem);
             font-weight: bold;
-            @include media-query(770px){
-                margin-bottom: 2rem;
-               }
-            h5 {
-                letter-spacing: 1px;
+            @include media-query(860px){
+                position: static;
+                transform: translate(0 ,0);
+                margin-top: 1rem;
             }
+            @include media-query(420px){
+                margin-top: 0rem;
+            }
+
         }
+       
     }
 }
   
 
 .tagline {
-    background: $primary;
-    color: $light;
-    padding: 2.3rem 0;
     text-align: center;
     font-size: 2.5rem;
-font-family: $font-bold;
+    font-family: $font-bold;
+    &__wrapper {
+        background: $primary;
+        padding: 2.3rem 0;
+        color: $light;
+
+    }
     h1 {
         letter-spacing: 1px;
     }
@@ -162,9 +168,17 @@ font-family: $font-bold;
                 top: 0;
                 right: 0rem;
                 z-index: 1;
-                @include media-query(770px){
-                    right: -2rem;
-                   }
+                
+                @include media-query(858px){
+                    display: none;
+                }
+                @include media-query(420px){
+                    display: block; 
+                    top: 50%;
+                    left: 0;
+                    transform: rotate(90deg);
+                    height: 50rem;
+                }
             }
             .content__head {
                 h2 {
@@ -191,6 +205,7 @@ font-family: $font-bold;
             }
 
             .content__footer {
+                margin-bottom: 8rem;
                 p {
                     margin-bottom: 0;
                 }
@@ -206,148 +221,200 @@ font-family: $font-bold;
 }
 
   
-.cta {
-    padding: 1.4rem;
-    background:$primary ;
+.savebig,
+.search  {
+    
     text-align: center;
+    &__wrapper {
+        background:$primary;
+        padding: 5rem;
+        @include media-query(470px){
+            padding: 3rem;
+        }
+        h2 {
+            font-size: clamp(2rem, 5vw, 3.5rem);
+            font-family: $font-bold;
+            margin-bottom: 2rem;
+        }
+
+        p {
+            font-size: 2rem;
+            max-width: 65rem;
+            margin: 0 auto;
+            color: #fff;
+        }
+
+        a {
+            font-size: 2rem;
+            text-decoration: none;
+            width:40rem;
+            background-color: #fff;
+            color: $dark;
+            border: 1px solid $gray;
+            padding: 1.2rem;
+            @include media-query(470px){
+                width: 100%;
+                padding: .8rem;
+                font-size: 1.6rem;
+            }
+        }
+    }
 }
+
+
+.search__wrapper {
+    background-color: $secondary;
+}
+
 
 .location {
     margin: 4rem 0;
+    &__intro {
+        font-size:clamp( 1.5rem, 5vw,2rem);
+        text-align: center;
+        padding: 0rem 7rem 5rem;
+        margin: 0;
+        span {
+            text-decoration: underline;
+        }
+
+        @include media-query(420px){
+            padding: 0rem 2rem 5rem;
+        }
+    }
     &__grid {
         display: grid;
         grid-template-columns: 2fr 1fr;
-        grid-gap: 2rem;
+        grid-gap: 0rem;
         @include media-query(770px){
             grid-template-columns: 1fr;
            }
     }
 
-    article {
-        padding:3rem 2rem;
-        background-color: $light;
-        border-radius: 1rem;
-        @include box-shadow; 
-        h3 {
-            font-size: 2rem;
-            font-family: $font-bold;
-            margin-bottom: 1rem;
-        }
-
-        h4 {
-            margin-bottom: 1rem;
-       
-        }
-
-        .hrs-list {
-            margin-bottom: 1rem;
-            height: 2rem;
-            overflow: hidden;
-            transition: all .5s ease;
-        }
-        .hrs-list li {
-            margin-bottom: 1rem;
-        }
-
-        .hrs-list.expand {
-            height: 14rem;
-        }
-        a {
-            text-decoration: none;
-            display: block;
-            margin-bottom: 2rem;
-            outline: none;
-        }
-
-        .show-all {
-            display: block;
-            margin-bottom: 4rem;
-        }
-        iframe {
-            width: 100%;
-            height: 24rem;
-            margin-bottom:4rem ;
-        }
-
-        h4 {
-            font-size: 1.8rem;
-        }
-
-        .services__grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            @include media-query(770px){
-                grid-template-columns: 1fr;
-               }
-            ul {
-                margin-bottom: 0;
-           
-                li {
-                    margin-bottom: 1rem;
+    .location__btn {
+        background-color: $primary;
+        padding: 1rem 2rem;
+        ul {
+            display: flex;
+            justify-content: space-around;
+            li {
+                a {
+                    padding: .8rem 2rem;
+                    background-color: $light;
+                    text-decoration: none;
+                    border-radius: 3rem;
+                    width: 13rem;
+                    display: block;
+                    text-align: center;
+                    color: $dark;
                 }
             }
         }
     }
 
+    .map__wrapper {
+        @include media-query(420px){
+            display: none;
+        }
+        &.show {
+            display: block;
+        }
+    }
+
+    .map__wrapper iframe {
+        display: block;
+        min-height: 75rem;
+        width: 100%;
+        @include media-query(960px){
+            min-height: 35rem;
+            padding: 1rem;
+        }
+    }
     aside {
-        .main_img {
-            width: 100%;
+        min-height: 75rem;
+        background-color: #fff;
+        padding: 3em 2.5rem;
+        position: relative;
+        z-index: 1;
+        box-shadow: -3px 0 5px rgba(0,0,0,0.1);
+        border: 1px solid rgb(230, 230, 230);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        @include media-query(420px){
+            box-shadow: none;
+            background-color: transparent;
+            border: none;
+            display: none;
+            &.show {
+                display: block;
+            }
         }
+        .store {
+            padding-left: 2rem;
+            border-left: .4rem solid $primary;
+            min-height: 12.5rem;
+            margin-bottom: 3rem;
+            
+            h4 {
+                font-size: 2rem;
+                font-family: $font-bold;
+                margin-bottom: .5rem;
+            }
+            &__info {
+                li {
+                    margin-bottom: .5rem;
+                    img {
+                        width: 1.2rem;
+                        display: inline-block;
+                        margin-right: .5rem;
+                    }
+                }
+            }
 
-        .usa_map img{
-            @include media-query(770px){
-                width: 100%;
-               }
+            &__btn {
+                display: flex;
+                margin-top: 2rem;
+              
+
+                @include media-query(420px){
+                    flex-direction: row;
+                }
+                li {
+                    margin-right: 1.5rem;
+                    @include media-query(1050px){
+                        margin-right: .5rem;
+                    }
+                    @include media-query(960px){
+                        margin-bottom: 1rem;
+                    }
+                }
+                a {
+                    padding: 1.2rem; 
+                    background-color: $primary;
+                    border-radius: .5rem;
+                    text-decoration: none;
+                    font-weight: bold;
+                    color: #fff;
+                    letter-spacing: 1px;
+                    font-size: 1.4rem;
+                    @include media-query(960px){
+                        display: block;
+                        text-align: center;
+                    }
+
+                    @include media-query(420px){ 
+                        display: inline-block;
+                    }
+                }
+            }
         }
-
-        
-
-        .find__us {
-            padding: 2rem;
-            background:$light;
-            margin: 1rem 0 1.5rem;
-             box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
-             a {
-                 color: #1777F2;
-                 text-decoration: none;
-                 font-weight: bold;
-                 display: block;
-                 margin-bottom: 2rem;
-             }
-             p {
-                 display: flex;
-                 align-items: center;
-                
-                 img {
-                     padding-left: .5rem;
-                     align-self: center;
-                 }
-             }
+        .store:last-child {
+            margin-bottom: 0;
         }
     }
 }
 
-.main__cta {
-    background-color: $gray;
-    margin-bottom: 4rem;
-    &__wrapper {
-        background-color: $secondary;
-        text-align: center;
-        padding: 5rem 1.5rem;
-    }
-    h2 {
-        font-size: 3.8rem;
-        font-family: $font-bold;
-        margin-bottom: 3rem;
-        line-height: 1.4;
-        @include media-query(770px){
-            font-size: 2.5rem;
-           }
-        span {
-            color: $light;
-        }
-    }
-}
 
 .why__boost {
     background-color: $gray;
@@ -402,118 +469,34 @@ font-family: $font-bold;
 
   
 
-.career {
-    background-color: $light;
-    padding-bottom: 6rem;
-    overflow: hidden;
-    &__content {
-        text-align: center;
-        h2 {
-            font-size: 7rem;
-            font-family: $font-bold ;
-            padding: 4rem;
-            @include media-query(770px){
-                font-size: 4rem;
-               }
-        }
-         p {
-             line-height: 1.8;
-         }
-    }
-    h3 {
-        font-size: 5rem;
-        text-align: center;
-        font-family: $font-bold;
-        padding: 2rem 1.5rem 4.5rem;
-        @include media-query(770px){
-            font-size: 3rem;
-           }
-    
-    }
-
-    &__grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 1rem;
-     
-        @include media-query(770px){
-            grid-template-columns: 1fr;
-          
-           }
-        &__item {
-            @include media-query(770px){
-                margin-bottom: 1rem;
-               }
-            img {
-                width: 100%;
-                
-            }
-            ul {
-                li {
-                    margin-bottom: 1rem;
-                }
-            }
-           
-        }
-
-        &__item.content {
-            position: relative;
-      
-       
-            p, ul {
-                position: relative;
-                z-index: 2;
-            }
-            
-            .pattern img {
-                position: absolute;
-                width: unset;
-                top: 0;
-                right: 0;
-                z-index: 0;
-                @include media-query(770px){
-                    right: -5rem;
-                   }
-            }
-        }
-    }
-    
-
-    
-}
-
-
-.hiring {
-    background-color: $light;
-    &__wrapper {
-        background-color: $gray;
-        padding: 3rem;
-    }
-    &__item {
-        margin-bottom: 6rem;
-        &:last-child {
-            margin-bottom: 0;
-        }
-        h3 {
-            font-size: 3rem;
-            font-family: $font-bold;
-            margin-bottom: 2rem;
-        }
-
-        ul {
-            margin-bottom: 3rem;
-            li {
-                margin-bottom: 1rem;
-            }
-        }
-    }
-}
-
 footer {
     background:$light;
     text-align: center;
     padding: 2rem;
+    position: relative;
     p {
         margin-bottom: 0;
     }
+
+    a {
+        color: $primary;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+ .disclaimer {
+     position: absolute;
+     top: 50%;
+     transform: translateY(-50%);
+     left: 2rem;
+     color: $primary;
+     text-decoration: none;
+     @include media-query(770px){
+         position: static;
+         display: block;
+         margin-top: 1rem;
+     }
+    }   
 }
